--- a/index.html
+++ b/index.html
@@ -2,10 +2,29 @@
 <html lang="ja" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>naoya.madoka</title>
+    <link rel="stylesheet" href="/mosha/style.css">
   </head>
   <body>
-    <p>sex</p>
-    <p>update/p>
+    <header>
+      <div class="container">
+        <div class="header-left">
+          <!img class="logo" src="" alt="">
+        </div>
+        <div class="header-right">
+          <ul>
+            <li>TOP</li>
+            <li>PRODUCT</li>
+            <li>ABOUT</li>
+            <li>NEWS</li>
+            <li>CONTACT</li>
+          </ul>
+        </div>
+      </div>
+    </header>
+    <<main>
+    </main>
+    <footer></footer>
+
   </body>
 </html>
